adding toolbar item to navigate to another page

--- a/TravepRecordApp/HomePage.xaml
+++ b/TravepRecordApp/HomePage.xaml
@@ -6,6 +6,9 @@
              xmlns:local="clr-namespace:TravepRecordApp"           
              mc:Ignorable="d"
              x:Class="TravepRecordApp.HomePage">
+    <TabbedPage.ToolbarItems>
+        <ToolbarItem x:Name="btnAdd" Text="+" IconImageSource="icons/plus.png" Clicked="btnAdd_Clicked" />
+    </TabbedPage.ToolbarItems>
     <local:HistoryPage Title="History"></local:HistoryPage>
     <local:MapPage Title="Map"></local:MapPage>
     <local:ProfilePage Title="Profile"></local:ProfilePage>
