--- a/TravepRecordApp/MainPage.xaml
+++ b/TravepRecordApp/MainPage.xaml
@@ -10,8 +10,8 @@
         <Label Text="Enter your Login Email and Password" 
            HorizontalOptions="Center"
            VerticalOptions="Center" FontSize="Large" Margin="0,0,0,150" />
-        <Entry x:Name="entUser" Placeholder="User Email" Keyboard="Email" TextColor="{StaticResource blueColor}"></Entry>
-        <Entry x:Name="entPassword" Placeholder="User Password" IsPassword="True" TextColor="{StaticResource blueColor}"></Entry>
+        <Entry x:Name="entUser" Placeholder="User Email" Text="user@mail.com" Keyboard="Email" TextColor="{StaticResource blueColor}"></Entry>
+        <Entry x:Name="entPassword" Placeholder="User Password" Text="password" IsPassword="True" TextColor="{StaticResource blueColor}"></Entry>
         <Button x:Name="LogInButton" Text="Log In" 
                 Clicked="LogInButton_Clicked"
                 Margin="0,20,0,0"
