--- a/TravepRecordApp/HistoryPage.xaml
+++ b/TravepRecordApp/HistoryPage.xaml
@@ -15,8 +15,9 @@
                             <ColumnDefinition Width="auto"></ColumnDefinition>
                         </Grid.ColumnDefinitions>
                         <Label Grid.Column="0" Text="{Binding Experience}" FontAttributes="Bold"></Label>
-                        <Button Grid.Column="1" x:Name="btnDeleteHistory" Clicked="btnDeleteHistory_Clicked" 
-                                Text="X" BackgroundColor="Red" TextColor="White"></Button>
+                        <Button Grid.Column="1" x:Name="btnDeleteHistory" ImageSource="delete.png" Clicked="btnDeleteHistory_Clicked" 
+                                BackgroundColor="Transparent" TextColor="Transparent">
+                        </Button>
                     </Grid>
                 </ViewCell>
             </DataTemplate>
