El tema de Azure... fracaso total.... todo con sqlite.... que se le va a hacer

--- a/TravepRecordApp/MainPage.xaml
+++ b/TravepRecordApp/MainPage.xaml
@@ -13,12 +13,18 @@
            HorizontalOptions="Center"
            VerticalOptions="Center" FontSize="Large" Margin="0,0,0,150" />
         -->
-        <Entry x:Name="entUser" Placeholder="User Email" Text="user@mail.com" Margin="0,30,0,0" Keyboard="Email" TextColor="{StaticResource blueColor}"></Entry>
-        <Entry x:Name="entPassword" Placeholder="User Password" Text="password" IsPassword="True" TextColor="{StaticResource blueColor}"></Entry>
+        <Entry x:Name="entUser" Placeholder="User Email" Text="igaliot21@gmail.com" Margin="0,30,0,0" Keyboard="Email" TextColor="{StaticResource blueColor}"></Entry>
+        <Entry x:Name="entPassword" Placeholder="User Password" Text="ayanami" IsPassword="True" TextColor="{StaticResource blueColor}"></Entry>
         <Button x:Name="LogInButton" Text="Log In" 
                 Clicked="LogInButton_Clicked"
                 Margin="0,20,0,0"
                 Style="{StaticResource normalButton}"></Button>
+        <Button x:Name="RegisterUserButton" Text="Register" 
+                Clicked="RegisterUserButton_Clicked"
+                HorizontalOptions="End"
+                Margin="0,20,0,0"
+                TextColor="{StaticResource blueColor}"
+                BackgroundColor="Transparent"></Button>        
     </StackLayout>
 
 </ContentPage>
