--- a/TravepRecordApp/RegisterPage.xaml
+++ b/TravepRecordApp/RegisterPage.xaml
@@ -13,10 +13,12 @@
                IsPassword="True" TextColor="{StaticResource blueColor}"
                Text="{Binding Password, Mode=TwoWay}"></Entry>
         <Entry x:Name="entConfirmPassword" Placeholder="Confirm Password" 
-               IsPassword="True" TextColor="{StaticResource blueColor}"></Entry>
+               IsPassword="True" TextColor="{StaticResource blueColor}"
+               Text="{Binding ConfirmPassword, Mode=TwoWay}"></Entry>
         <Button x:Name="RegisterButton" Text="Register" 
-                Clicked="RegisterButton_Clicked"
+                Command="{Binding registerCommand}"
+                CommandParameter="{Binding User}"
                 Margin="0,20,0,0"
                 Style="{StaticResource normalButton}"></Button>
     </StackLayout>
-</ContentPage>
+</ContentPage> 
