Fast redereres... turns out there'e the default on the current versions of xamarin... so nothing to do really. Now...Layoutcompression.... that's a neat trick

--- a/TravepRecordApp/HistoryPage.xaml
+++ b/TravepRecordApp/HistoryPage.xaml
@@ -15,7 +15,7 @@
         <ListView.ItemTemplate>
             <DataTemplate>
                 <ViewCell>
-                    <Grid>
+                    <Grid CompressedLayout.IsHeadless="True">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="*"></RowDefinition>
                             <RowDefinition Height="*"></RowDefinition>
