--- a/TravepRecordApp/MainPage.xaml
+++ b/TravepRecordApp/MainPage.xaml
@@ -6,7 +6,7 @@
              mc:Ignorable="d"
              x:Class="TravepRecordApp.MainPage">
 
-    <StackLayout VerticalOptions="CenterAndExpand" Margin="15,0,15,0">
+    <StackLayout VerticalOptions="CenterAndExpand" CompressedLayout.IsHeadless="True" Margin="15,0,15,0">
         <Image x:Name="imgMainPage" Aspect="AspectFit" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand"/>
         <!--
         <Label Text="Enter your Login Email and Password" 
